# Antibody-Annotation-to-JSON

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-optional.yaml  CONTRIBUTING.md  README.md  antibody_ann_to_json.py  pyproject.toml  reinstall_project.sh  requirements.txt  runner.py
.github/workflows/: deploy-docs.yml  test-docs-build.yml
antibody_annotation_to_json/: cli.py  core.py
antibody_annotation_to_json/dev/: fix_schema_targets.py  uri.py
archived/: INN_antibody_schema_inconsistent_abstraction.json  generate_schema_doc.yml  parser.py
archived/html_schema_v1/: INN_antibody_schema.html
archived/html_schema_v2/: INN_antibody_schema.html
doc/: INN_antibody_schema.json  annotation_format_mapping.md
json_files/: .gitignore
sample_input/: 12120.txt  12177.txt  12197.txt  12219.txt  12309.txt  12374.txt  12381.txt
test/: README.md
test/expected_json_files/: 12023_expected.json
test/input_data/: 11948.txt  11957.txt  12023.txt  12086.txt  12139.txt  12155.txt  12164.txt  12264.txt  12277.txt  12292.txt  12295.txt  12302.txt  12311.txt  12318.txt  12346.txt  12387.txt  12397.txt
test/invalid_json_files/: 12023_no_ChainLength.json  12023_no_CysPositions.json  12023_no_DisulfidesIntra.json  12023_no_Format.json  12023_no_Germline.json  12023_no_NGlycos.json  12023_no_Range.json  12023_no_Request.json  12023_no_Type.json  12023_uneval_prop.json
test/sample_input/: 11678.txt  12082.txt  12168.txt  12198.txt  12199.txt  12204.txt  12236.txt  12317.txt
website/: README.md  docusaurus.config.js  package-lock.json  package.json
(+53 files in other folders)
